# qibt_rust

./: .gitignore  CHANGELOG.md  CI_UPDATE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION_GUIDE.md  README.md  example_job.sh  output_demo.rs  verify_ci.sh
.github/workflows/: ci-complex-backup.yml  ci.yml
examples/: cloud_streaming_demo.rs  unified_loader_demo.rs  unified_trajectory_demo.rs
python/: create_48h_test.py  create_test_netcdf.py  create_test_zarr.py
src/: benchmark.rs  config.rs  lib.rs  main.rs  parallel.rs  single_file_data_loader.rs  time_series_netcdf_reader.rs  time_utils.rs
src/data_io/: ascii_writer.rs  common.rs  generic_accessor.rs  mod.rs  output_trait.rs  reader.rs  utils.rs  writer.rs  zarr_writer.rs
src/io/: cloud_auth.rs  mod.rs  streaming_reader.rs  zarr_reader.rs  zarr_reader_old.rs
src/math/: interpolate.rs  mod.rs  physics.rs  tests.rs
src/trajectory/: back_traj.rs  mod.rs  parcel.rs
tests/: README_zarr_tests.md  data_io_integration_test.rs  data_io_reader_test.rs  integration_test.rs  math_utilities_test.rs  netcdf_writer_test.rs  output_format_test.rs  parallel_grid_test.rs  time_utils_test.rs  zarr_reader_stub_test.rs  zarr_reader_test.rs
